--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -9,7 +9,7 @@
 <body>
     <h1>UPLOAD YOUR IMAGES HERE...!!</h1>
     <form method="post" action="/upload" enctype="multipart/form-data">
-        <input type="file" name="image">
+        <input type="file" name="image" required>
         <input type="submit">
     </form>
 </body>
