--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -7,7 +7,7 @@
     <title>Upload Images</title>
 </head>
 <body>
-    <h1>UPLOAD YOUR IMAGES HERE...!!</h1>
+    <h1>UPLOAD YOUR FILE HERE...!!</h1>
     <form method="post" action="/upload" enctype="multipart/form-data">
         <input type="file" name="image" required>
         <input type="submit">
